[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "response-yolo"
version = "0.1.0"
description = "Command-line reinforced concrete sectional analysis inspired by Response-2000"
readme = "docs/USER_GUIDE.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jamie McIntyre"},
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
response-yolo = "response_yolo.cli:main"

[tool.setuptools.packages.find]
include = ["response_yolo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
